--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-three/fiber": "8.13.3",
     "@react-three/xr": "^5.7.1",
     "@types/three": "0.152.1",
+    "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "three": "0.153.0"
   },
   "devDependencies": {
